<resources>
    <string name="app_name">文音悦读</string>
    <string name="text_version">版本：%s</string>

    <string name="text_empty">没有数据</string>
    <string name="text_error_tips">网络错误，请重试</string>
    <string name="button_retry">点击重试</string>
    <string name="text_end">&#045;&#032;已加载全部数据&#032;&#045;</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="drawer_menu_article">文章</string>
    <string name="drawer_menu_voice">声音</string>
    <string name="drawer_menu_bookshelf">书架</string>
    <string name="drawer_menu_favourite">收藏</string>
    <string name="drawer_menu_create">投递文章</string>
    <string name="drawer_menu_settings">设置</string>
    <string name="drawer_menu_feedback">反馈</string>

    <string name="title_random_article">随机文章</string>
    <string name="title_favourite_article">收藏文章</string>

    <string name="button_next_chapter">下一页</string>
    <string name="button_previous_chapter">上一页</string>

    <string name="title_exit_app">是否退出应用？</string>
    <string name="button_ok">确认</string>
    <string name="button_cancel">取消</string>

    <string name="text_favourite_empty">暂无收藏</string>

    <string name="title_join_us">加入主播</string>

    <string name="text_create_article">1 添加文章是匿名的。\n2 保持良好的文章格式：段落之间空一行，每段开头不空两个字，所有标点都是中文标点。\n3 原则上更加欢迎经典短篇。</string>
    <string name="text_article_title">标题</string>
    <string name="text_article_author">作者</string>
    <string name="text_article_content">文章</string>
    <string name="text_article_deliver">投递者</string>
    <string name="text_article_source">原文地址</string>
    <string name="button_article_add">添加文章</string>
    <string name="message_create_article_succeed">投递文章成功</string>
    <string name="message_create_article_failed">投递文章失败</string>

    <string name="message_loading">请稍候…</string>

    <string name="text_contact_hint">你的联系方式（邮箱，微博，QQ，微信 皆可）</string>
    <string name="text_feedback_hint">请写下你对 [文音阅读] 的感受吧</string>
    <string name="message_feedback_empty">反馈内容不能为空</string>
    <string name="message_feedback_succeed">提交反馈成功</string>
    <string name="message_feedback_failed">提交反馈失败</string>

    <string name="text_submit">提交</string>
</resources>
