<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_article"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/text_create_article"
                android:textColor="#808080"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/text_article_title"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_create_article_edit_text"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/text_article_author"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/authorView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_create_article_edit_text"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/text_article_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_create_article_edit_text"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:padding="3dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/text_article_deliver"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/deliverView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_create_article_edit_text"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/text_article_source"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sourceView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_create_article_edit_text"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="#808080" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_random_article"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:text="@string/button_article_add"
                android:textColor="#8F5A0A" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>